# vulkan-engine

./: CMakeLists.txt  CMakePresets.json
Game/Source/: Main.cpp
Scripts/: Setup.py  vcpkg.json
Shared/: CMakeLists.txt  shaders.bat
Shared/Source/Core/: App.cpp  App.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanWindow.cpp  VulkanWindow.hpp
Shared/Source/Utils/: VulkanRAII.hpp
